[AH-3322] search input small width layout problem fixed

--- a/bundles/mapping/mapmodule/scss/search.scss
+++ b/bundles/mapping/mapmodule/scss/search.scss
@@ -78,7 +78,7 @@ div.published-search-div {
   float: left; 
 
   div.search-area-div {
-    min-width: 180px;
+    max-width:318px;
     display: block;
     float: right;   
 
@@ -86,10 +86,6 @@ div.published-search-div {
       display: inline-block;
       float: left;
       height: 38px; 
-    }
-
-    div.search-middle {
-      min-width: 180px; 
     }
 
     div.search-right {
@@ -101,7 +97,6 @@ div.published-search-div {
       border: none;
       box-shadow: none;
       background-image: none;
-      width: 145px;
       float: left;
       padding: 5px;
       outline: none; 
